// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PremiumMark should render place card's PremiumMark 1`] = `
<div
  className="place-card__mark"
>
  <span>
    Premium
  </span>
</div>
`;

exports[`PremiumMark should render property's PremiumMark 1`] = `
<div
  className="property__mark"
>
  <span>
    Premium
  </span>
</div>
`;
